# WALL-Env-idf

./: .gitignore  AGENTS.md  CMakeLists.txt  ESP_IDF_MIGRATION_PLAN.md  Pre-IDF-Migration README.md  README.md  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.defaults  wall_env.matter  wall_env.zap
.serena/: project.yml
components/BME68x_Sensor_library/: CMakeLists.txt
components/app_reset/: CMakeLists.txt  (+1 more)
components/bsec2/: CMakeLists.txt
components/bsec2/src/: bsec2.cpp  bsec2.h
docs/: matter_ota_release_policy.md  matter_ota_requestor.md
enclosure/: 1.3- Screen Lid - Hosyond - Lid - OLED.stl  1.3- Screen Lid - Hosyond - OLED Retaining Bracket.stl  Main Housing - Main Housing.stl  Solid Lid - Lid - Solid.stl
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  app_network_instance.cpp  chip_project_config.h  idf_component.yml
main/drivers/: OLEDDisplayFonts.h  bme68x_driver.cpp  bme68x_driver.h  bsec2_app.cpp  bsec2_app.h  bsec2_configs.h  i2c_bus.cpp  i2c_bus.h  kirby.h  oled_sh1106.cpp  oled_sh1106.h  oled_ssd1306.cpp  oled_ssd1306.h  shtc3.cpp
main/zap-generated/: CodeDrivenCallback.h  CodeDrivenInitShutdown.cpp  IMClusterCommandHandler.cpp  access.h  endpoint_config.h  gen_config.h
reference/: Commissioning failure 11.10-2-5-26  Commissioning failure 11.23-2-5-26  Commissioning failure 11.35-2-5-26  Commissioning failure 8.37-2-5-26  thread_diagnostics_readme.md
sdkconfig.boards/: supermini.defaults
sdkconfig.revisions/: v1.defaults  v2.defaults
tools/: activate-idf.sh  build-ota.sh  build-revision.sh  build-supermini.sh  build.sh  build_with_log.sh  flash-bin-supermini.sh  flash-bin.sh  flash-supermini.sh  flash.sh  idf.sh  package-release.sh  set-target-build_with_log.sh  set-target-esp32c6-supermini.sh  set-target-esp32c6.sh  update-version.sh  warn_triage.py  zap_regen.sh
(+1 files in other folders)
